--- a/index.html
+++ b/index.html
@@ -23,8 +23,11 @@
     <section class="bottom-section">
         <div class="input-container">
             <input class="styled-input" placeholder="What do you want to create?"/>
-            <div id="submit-icon">➢</div>
         </div>
+    </section>
+
+    <section class="submit-images">
+        <button id="submit-btn">Get Images</button>
     </section>
     
     <div class="api-key-container">
