Added edit, delete, add btn API key

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
     <div class="api-key-container">
         <section class="api-key-section">
             <label for="api-key-input">Enter OpenAI API Key:</label>
-                <input class="styled-input" id="api-key-input" type="text" placeholder="Please add your API Key">
+            <input class="styled-input" id="api-key-input" type="text" placeholder="Please add your API Key">
+            <div class="api-key-actions">
+                <button id="save-btn">Save</button>
+                <button id="edit-btn">Edit</button>
+                <button id="delete-btn">Delete</button>
+            </div>
         </section>
     </div>
 
